--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ opencv_contrib_python_headless==4.7.0.72
 opencv_python==4.10.0.84
 opencv_python_headless==4.10.0.84
 paddleocr==2.9.1
-paddleocr.egg==info
+paddleocr.egg
 Requests==2.32.3
 ultralytics==8.3.8
 uvicorn==0.32.0
