--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-
-numpy==2.1.3
-opencv_contrib_python==4.10.0.84
-opencv_contrib_python_headless==4.7.0.72
-opencv_python==4.10.0.84
-opencv_python_headless==4.10.0.84
-streamlit 
-opencv-python 
-ultralytics 
-paddleocr
+streamlit==1.33.0
+opencv-python==4.8.0.76
+ultralytics==8.0.20
+paddleocr==2.6.1.1
+numpy==1.24.2
