--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-streamlit==1.33.0
-opencv-python==4.8.0.76
-ultralytics==8.0.20
-paddleocr==2.6.1.1
-numpy==1.24.2
+streamlit
+opencv-python
+ultralytics
+paddleocr
+numpy
